--- a/km3.html
+++ b/km3.html
@@ -35,13 +35,12 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p><b>dengan disain klasik memberikan kesan tersendiri saat anda mengunakan</b></p>
+<p>kamar mandi inimemiliki gaya klasik, minimali </p>
 </div>
 <div class="Product-price">
 <span>Rp.2.300.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
-<br>&copy; 2018 Omahku.com
 </div>
 </div>
 </main>
