--- a/cerminbulat1.html
+++ b/cerminbulat1.html
@@ -8,6 +8,7 @@
 <meta name="robots" content="noindex,follow"/>
     
 <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap css file-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -42,7 +43,6 @@
 <div class="Product-price">
 <span>Rp.585.000</span>
 <a href="" target="_blank" class="cart-btn">Beli</a>
-&reg;omahku.com &nbsp
 </div>
 </div>
 </main>
