--- a/cerminbulat3.html
+++ b/cerminbulat3.html
@@ -8,6 +8,7 @@
 <meta name="robots" content="noindex,follow"/>
     
 <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap css file-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -37,12 +38,11 @@
 <h1><b>Cermin Dinding Ukiran</b></h1>
 <p>Ukuran : 170 x 40 x 230 cm</p>
 <p>Lemari pajangan jati</p>
+<p>Lemari pajangan kristal</p>
 </div>
 <div class="Product-price">
 <span>Rp.1.100.000</span>
 <a href="" target="_blank" class="cart-btn">Beli</a>
-&reg;omahku.com &nbsp
-
 </div>
 </div>
 </main>
